crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v2_docs@cpp.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
expression: project_model
snapshot_kind: text
---
{
  "version": "2",
  "data": {
    "name": "cpp_math",
    "version": "0.1.0",
    "description": null,
    "authors": null,
    "license": null,
    "licenseFile": null,
    "readme": null,
    "homepage": null,
    "repository": null,
    "documentation": null,
    "build": null,
    "buildNumber": null,
    "purls": null,
    "targets": {
      "defaultTarget": {
        "hostDependencies": {
          "cmake": {
            "binary": {
              "version": "3.20.*",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null
            }
          },
          "nanobind": {
            "binary": {
              "version": "2.4.*",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null
            }
          },
          "python": {
            "binary": {
              "version": "3.12.*",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null
            }
          }
        },
        "buildDependencies": {},
        "runDependencies": {},
        "constraints": {}
      },
      "targets": {}
    }
  }
}
