crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v2_docs@getting_started.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
expression: project_model
snapshot_kind: text
---
{
  "version": "2",
  "data": {
    "name": "python_rich",
    "version": "0.1.0",
    "description": null,
    "authors": null,
    "license": null,
    "licenseFile": null,
    "readme": null,
    "homepage": null,
    "repository": null,
    "documentation": null,
    "build": null,
    "buildNumber": null,
    "purls": null,
    "targets": {
      "defaultTarget": {
        "hostDependencies": {
          "hatchling": {
            "binary": {
              "version": "*",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null
            }
          }
        },
        "buildDependencies": {},
        "runDependencies": {
          "rich": {
            "binary": {
              "version": "13.9.*",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null
            }
          }
        },
        "constraints": {}
      },
      "targets": {}
    }
  }
}
