crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v2_docs@workspace_variants.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
expression: project_model
snapshot_kind: text
---
{
  "version": "2",
  "data": {
    "name": "python_rich",
    "version": "0.1.0",
    "description": null,
    "authors": null,
    "license": null,
    "licenseFile": null,
    "readme": null,
    "homepage": null,
    "repository": null,
    "documentation": null,
    "build": null,
    "buildNumber": null,
    "purls": null,
    "targets": {
      "defaultTarget": {
        "hostDependencies": {
          "hatchling": {
            "binary": {
              "version": "==1.26.3",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null
            }
          }
        },
        "buildDependencies": {},
        "runDependencies": {
          "cpp_math": {
            "source": {
              "Path": {
                "path": "packages/cpp_math"
              }
            }
          },
          "rich": {
            "binary": {
              "version": ">=13.9.4,<14",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null
            }
          }
        },
        "constraints": {}
      },
      "targets": {}
    }
  }
}
